# FastaApi-Practice

./: .gitignore  README.md  project_structure.json  pyproject.toml  requirements.txt
Docker/dev/mongo/: docker-compose.yml
Docker/dev/psql/: docker-compose.yml
Docker/dev/rabbit/: docker-compose.yml
Docker/dev/traefik/: docker-compose.yml
src/business/logic/: response_handler.py
src/business/schemas/: message_schema.py
src/config/: __init__.py  setup.py
src/repository/: data_adapter.py  db.py
src/repository/models/: base.py  invoice.py
src/tools/: __init__.py  custom_logging.py  rabbit_client.py
src/web/: health_manager.py  main.py
src/web/api/: documentation.py  schemas.py
tests/: test_rabbit_client.py
