[tool.poetry]
name = "fastapi-practice"
version = "0.1.0"
description = ""
authors = ["m.dehghani <mahdidehghani519@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aio-pika = "^9.5.4"
ujson = "^5.10.0"
loguru = "^0.7.3"
motor = "^3.7.0"
fastapi = "^0.115.8"
pydantic-settings = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

